# Distributed-file-system

./: .gitignore  Distributed-file-system.cabal  pyrun.py  stack.yaml
ApiCollection/: ApiCollection.cabal
ApiCollection/src/: AuthApi.hs  DSAPI.hs
Auth-Server/: Auth-Server.cabal  stack.yaml
Auth-Server/app/: Main.hs
Auth-Server/src/: Api.hs  App.hs  Models.hs
Client-Proxy/: Client-Proxy.cabal
Client-Proxy/src/: Query_Client.hs
DS-Client/: DS-Client.cabal  stack.yaml
DS-Client/app/: Main.hs
DS-Client/src/: Lib.hs
Directory-Service/: Directory-Service.cabal  stack.yaml
Directory-Service/Client/: api.js  index.html  methods.rb
Directory-Service/Client/jquery/: index.html
Directory-Service/app/: Main.hs
Directory-Service/src/: Api.hs  App.hs  Model.hs  Models.hs
FileServer/: FileServer.cabal
FileServer/app/: Main.hs
FileServer/src/: Api.hs  App.hs  Cluster.hs  Models.hs  Server'.hs  sqlite.db
Setup/: Setup.cabal  stack.yaml
Setup/app/: Main.hs
Setup/src/: Lib.hs
src/: App.hs  Lib.hs  UserServer.hs  server.hs
