name:                Distributed-file-system
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Distributed-file-system#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  UserServer
  build-depends:       base >= 4.7 && < 5
                     , base-compat >= 0.9.1
                     , mtl >= 2.2.1
                     , aeson >= 0.11.2.1
                     , attoparsec >= 0.13.1.0
                     , bytestring >= 0.10.8.1
                     , string-conversions >= 0.4
                     , time >= 1.6.0.1
                     , lucid >= 2.9.7
                     , http-media >= 0.6.4
                     , wai >= 3.2.1.1
                     , warp >= 3.2.9
                     , servant-server >= 0.8.1
                     , directory >= 1.2.6.2
                     , blaze-markup >= 0.7.1.0
                     , blaze-html >= 0.8.1.2
                     , aeson-compat >= 0.3.6

  default-language:    Haskell2010

executable Distributed-file-system-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Distributed-file-system
  default-language:    Haskell2010

test-suite Distributed-file-system-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Distributed-file-system
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Distributed-file-system
