name:                DS-Client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/DS-Client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11.2.1
                     , servant-server
                     , wai
                     , text
                     , servant >= 0.8.1
                     , servant-client >= 0.9.1.1
                     , warp
                     , persistent-template
                     , persistent >= 2.6
                     , persistent-sqlite
                     , http-client >= 0.4.31.2
                     , either >= 4.4.1.1
  default-language:    Haskell2010

executable DS-Client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DS-Client
  default-language:    Haskell2010

test-suite DS-Client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DS-Client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/DS-Client
