name:                Directory-Service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Directory-Service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                    ,  App
                    , Models
  build-depends:       base >= 4.7 && < 5
                    ,  aeson
                    ,  text
                    , persistent
                    , servant-server
                    , persistent-template >= 2.5.1.6
                    , persistent-sqlite
                    , string-conversions
                    , bytestring
                    , wai
                    , warp
                    , filepath
                    , servant
                    , directory
                    , time
                    , text
                    , monad-logger
  default-language:    Haskell2010

executable Directory-Service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Directory-Service
                    , text
  default-language:    Haskell2010

test-suite Directory-Service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Directory-Service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Directory-Service
